test/cases/pos/0019a_if_block.ul
if 2 < 3: {
  int x = 0;
  int y = 4;
  x = x + y;
}
