test/cases/neg/0202a_redecl_nest3.ul
int i = 4;
int z = 3;

if true: {
  int b = i + z;

  if b > 4: {
    int w = 0;
    int i = 2;
    w = i + w;
  }
}
